设计决策：改为enum都是name作为主键，如果有id，id作为唯一键